--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auto-router",
+  "name": "vue-auto-router2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,6 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "yanb",
   "license": "ISC"
 }
